<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Robot_Handshake_IO" Id="{9d3c1877-88dc-47d6-9c47-a9f1ff07c1dc}">
    <Declaration><![CDATA[TYPE
    ST_Robot_Handshake_IO : STRUCT
        IN  : ST_Robot_Handshake_Input;
        OUT : ST_Robot_Handshake_Output;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
